update menu styling

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
                 <div class="settings-group">
                     <div class="style-list">
-                        <button class="style-btn" data-value="1">Classic</button>
-                        <button class="style-btn" data-value="0">Waves</button>
-                        <button class="style-btn" data-value="2">PS3</button>
+                        <button class="menu-item" data-value="1">Classic</button>
+                        <button class="menu-item" data-value="0">Waves</button>
+                        <button class="menu-item" data-value="2">PS3</button>
                     </div>
                 </div>
 
