rename waves to "Original" and "Classic", remove rim highlight

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
                 <div class="settings-group">
                     <div class="style-list">
-                        <button class="menu-item" data-value="1">Classic</button>
-                        <button class="menu-item" data-value="0">Waves</button>
+                        <button class="menu-item" data-value="1">Original</button>
+                        <button class="menu-item" data-value="0">Classic</button>
                         <button class="menu-item" data-value="2">PS3</button>
                     </div>
                 </div>
