--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-    <script src="./shaders.js"></script>
-    <script src="./script.js" defer></script>
+    <script type="module" src="js/script.js"></script>
 </head>
 <body>
     <main>
@@ -24,9 +23,6 @@
 
                 <div class="settings-group">
                     <div class="style-list">
-                        <button class="menu-item" data-value="1">Original</button>
-                        <button class="menu-item" data-value="0">Classic</button>
-                        <button class="menu-item" data-value="2">PS3</button>
                     </div>
                 </div>
 
